Server section refactored